<resources>
    <string name="app_name">Caltxt</string>
    <string name="auto_response_expires">Automatic response period expires&#160;</string>
    <string name="last_seen">Last seen&#160;</string>
    <string name="info_delivering_caltxt">Delivering Caltxt</string>
    <string name="rule_left">Just left&#160;</string>
    <string name="rule_arrived">Arrived&#160;</string>
    <string name="pick_text">Pick text</string>
    <string name="logo">Logo</string>
    <string name="toast_initcall">Initiating call</string>
    <string name="tour_context_calling">Contextual Calling</string>
    <string name="tour_auto_response">Set your phone in automatic response mode when you cannot take call and let the caller know why</string>
    <string name="tour_share_call_purpose">Share the purpose of your call with your callee in real time</string>
    <string name="tour_title">Identify, Block, Auto respond, Contextual Calling &amp; more</string>
    <string name="tour_title_subject">Caltxt helps improve your conventional calling experience</string>
    <string name="tour_title_footer">The caller and the callee, both must have Caltxt app to use this service</string>
    <string name="tour_title_identify">Identify</string>
    <string name="tour_title_identify_subject">Identify caller from an unknown number</string>
    <string name="tour_title_identify_footer">Caller can share his name as he makes a call, so that the called party instantly identifies the caller even from an unknown number</string>
    <string name="tour_title_block">Block Unwanted Callers</string>
    <string name="tour_title_block_subject">Have more control over incoming calls</string>
    <string name="tour_title_block_footer">Block call from unknown caller instantly, or gracefully reject a call with a message from your contact</string>
    <string name="tour_title_calling">Contextual Calling</string>
    <string name="tour_title_calling_subject">Instantly know the purpose of an incoming call</string>
    <string name="tour_title_calling_footer">Caller can share the context (call purpose text) as he makes a call, so that the called party see the call purpose on screen when the phone rings</string>
    <string name="tour_title_auto">Automatic response</string>
    <string name="tour_title_auto_subject">Can\'t take calls? Set your phone in Automatic response mode</string>
    <string name="tour_title_auto_footer">During Automatic response mode, Caltxt automatically sends a predefined text message to your calling contacts</string>
    <string name="tour_title_missedcall">Missed call alerts</string>
    <string name="tour_title_missedcall_subject">Never miss a call with Caltxt</string>
    <string name="tour_title_missedcall_footer">You get missed call alerts for calls made by Caltxt user when your phone was not reachable or was switched off</string>
    <string name="tour_title_triggers">Triggers</string>
    <string name="title_my_status">Set my status</string>
    <string name="title_my_location">Tag this place</string>
    <string name="tour_title_triggers_subject">Set an action or a reminder for an event</string>
    <string name="tour_title_triggers_footer">For an event (location change or timer) you can set an action (send text or call a contact). For example, you can set an action to send a text to a contact when you arrive at work, or set a reminder to call a contact when you arrive at home</string>
    <string name="title_sms_verification">Verifying mobile number..</string>
    <string name="profile_image_title">Profile picture</string>
    <string name="profile_sim_serial_number">profile_sim_serial_number</string>
    <string name="profile_status_title">Status and mobile number</string>
    <string name="profile_name_title">Name</string>
    <string name="profile_cc_phone_title">Phone number</string>
    <string name="profile_occupation_title">What do you do ?</string>
    <string name="profile_phone_title">Phone number</string>
    <string name="prompt_occupation">Title, Job description</string>
    <string name="welcome_page_title">Welcome</string>
    <string name="welcome_get_started">Welcome to Caltxt!</string>
    <string name="caltxt_description_get_started">Automatic response, missed call alerts, block unwanted calls, and much more!</string>
    <string name="download_success">Download success</string>
    <string name="download_failure">Download failed</string>
    <string name="upload_success">Upload success</string>
    <string name="upload_failure">Upload failed</string>
    <string name="welcome_page_subject">Thank you for installing Caltxt! Please share your valuable feedback for improvements</string>
    <string name="welcome_page_skip">Skip</string>
    <string name="welcome_page_tour_button_text">Take a quick tour</string>
    <string name="action_pick_time">Pick time</string>
    <string name="action_pick_date">Pick date</string>
    <string name="action_pick_occurances">ONCE</string>
    <string name="action_ifttt_IF">if</string>
    <string name="action_ifttt_THEN">then</string>
    <string name="action_tour">Quick Tour</string>
    <string name="action_status_change_alert">Status change alert</string>
    <string name="action_text_reminder_header">Text reminder</string>
    <string name="action_call_reminder_header">Call reminder</string>
    <string name="action_mute_reminder_header">Mute phone reminder</string>
    <string name="action_text_reminder_body">Send text to %1$s now?</string>
    <string name="action_call_reminder_body">Call %1$s now?</string>
    <string name="action_share">Share Caltxt</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_selectall">Select all</string>
    <string name="action_block_selected">Block selected contacts</string>
    <string name="action_block_contact">Block this contact</string>
    <string name="action_delete_contact">Delete this contact</string>
    <string name="action_unblock_contact">Unblock this contact</string>
    <string name="prompt_alwaysask">Always ask</string>
    <string name="prompt_neverask_description">Caltxt will NOT prompt before completing this action</string>
    <string name="action_faq">FAQ</string>
    <string name="action_places">Places</string>
    <string name="action_invite_contact">INVITE</string>
    <string name="action_place_forget">FORGET</string>
    <string name="action_verify_number">Verify</string>
    <string name="action_sign_in_register">Continue</string>
    <string name="error_field_required">This field is required</string>
    <string-array name="call_reject_acknowledgement">
        <item>On vacation, only urgent calls please</item>
        <item>In different timezone, I\'ll call you back</item>
        <item>At mall, I\'ll call you back</item>
        <item>At cinema, I\'ll call you back</item>
        <item>Out of station, I\'ll call you back</item>
        <item>Out of office, I\'ll call you back</item>
        <item>At gym, I\'ll call you back</item>
        <item>In meeting, I\'ll call you back</item>
        <item>Driving, I\'ll call you back</item>
        <item>Busy, I\'ll call you back</item>
    </string-array>
    <string-array name="preference_status_grid_titles">
        <item>Available</item>
        <item>Busy</item>
        <item>Away</item>
        <item>Do not disturb</item>
        <item>Automatic Response</item>
        
        
        
        
        
        
        
        
        
        
        
        
        
        <item>at Home</item>
        <item>at Work</item>
        <item>at Hotel</item>
        <item>at Airport</item>
        <item>at Bar</item>
        <item>at Cafe</item>
        <item>at Hospital</item>
        <item>at Library</item>
        <item>at Mall</item>
        <item>at Movie</item>
        <item>at Restaurant</item>
        <item>at Casino</item>
        <item>at Gym</item>
        <item>at Pool</item>
        <item>at Spa</item>
        <item>Forget</item>
        
        
        
        
        
        
        
    </string-array>
    <string-array name="grid_status_icons">
        <item>@drawable/ic_available_white_24dp</item>
        <item>@drawable/ic_busy_white_24dp</item>
        <item>@drawable/ic_away_white_24dp</item>
        <item>@drawable/ic_donotdisturb_white_24dp</item>
        <item>@drawable/ic_auto_answer_sent_outline_white_24dp</item>
        
        
        
        
        
        
        
        
        
        
        
        
        
        <item>@drawable/ic_home_white_24dp</item>
        <item>@drawable/ic_work_white_24dp</item>
        <item>@drawable/ic_hotel_white_24dp</item>
        <item>@drawable/ic_local_airport_white_24dp</item>
        <item>@drawable/ic_local_bar_white_24dp</item>
        <item>@drawable/ic_local_cafe_white_24dp</item>
        <item>@drawable/ic_local_hospital_white_24dp</item>
        <item>@drawable/ic_local_library_white_24dp</item>
        <item>@drawable/ic_local_mall_white_24dp</item>
        <item>@drawable/ic_local_movies_white_24dp</item>
        <item>@drawable/ic_restaurant_white_24dp</item>
        <item>@drawable/ic_casino_white_24dp</item>
        <item>@drawable/ic_fitness_center_white_24dp</item>
        <item>@drawable/ic_pool_white_24dp</item>
        <item>@drawable/ic_spa_white_24dp</item>
        <item>@drawable/ic_radio_button_unchecked_white_24dp</item>
        
        
        
        
        
        
        
    </string-array>
    <string name="preference_title_caltxt_delivery_sms">Message delivery</string>
    <string name="property_app_run_first_time">property_first_run</string>
    <string name="preference_summary_autoresponse_disabled">Automatic response disabled</string>
    <string-array name="preference_autoresponse_array">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>2 hours</item>
        <item>3 hours</item>
    </string-array>
    <string-array name="preference_caltxt_delivery_sms">
        <item>Use SMS when Internet not available</item>
        <item>Over the Internet</item>
    </string-array>
    <string-array name="preference_caltxt_delivery_sms_values">
        <item>1</item>
        <item>0</item>
    </string-array>
    <string name="error_incorrect_number">Mobile number verification could not be completed. Please try again later</string>
    <string name="error_invalid_number_zero_prefix">Please remove any \'0\' prefix</string>
    <string name="error_invalid_number">Please enter valid mobile number</string>
    <string name="profile_img">Your profile photo (optional)</string>
    <string name="signup_terms_agreement"><![CDATA[<html><p align="justify">By clicking \"Agree and Continue\" you accept the terms of service defined
        at <a href="http://www.caltxt.com/legal/#Privacy" target="_blank"> http://www.caltxt.com/legal/#Privacy</a></p></html>]]></string>
    <string name="agree_terms_of_service">Agree and Continue</string>
    <string name="app_version">Version beta</string>
    <string name="copyright_line1">\u00a9 2019 Caltxt.com</string>
    <string name="copyright_line2">All rights reserved.</string>
    <string name="action_sendfeedback">Send feedback</string>
    <string name="action_sendalert">Send alert</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_addperson">Add</string>
    <string name="action_dial">Dial</string>
    <string name="action_clearblocklist">Clear</string>
    <string name="action_about">About</string>
    <string name="text_caller_img">Caller</string>
    <string name="action_call_hint">Type message here</string>
    <string name="preference_key_caltxt_delivery_sms">my_caltxt_delivery</string>
    <string name="preference_value_caltxt_length_max">160</string>
    <string name="preference_value_caltxt_delivery_data">0</string>
    <string name="willMessageShort">Last Will</string>
</resources>