<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/darkslategrey">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/logo"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/textsplash2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/imgLogo"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:text="@string/app_version"
        android:textColor="#999999"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textsplash1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/textsplash2"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="#e4ebf5"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textsplash3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgLogo"
        android:gravity="center_horizontal"
        android:text="@string/copyright_line1"
        android:textColor="#e4ebf5"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textsplash4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textsplash3"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:text="@string/copyright_line2"
        android:textColor="#999999"
        android:textSize="12sp" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textsplash4"
        android:layout_centerInParent="true"
        android:layout_marginBottom="8dp" />

</RelativeLayout>