<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
        android:id="@+id/tourpagetitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        style="@style/TextMediumBold"
        android:text="@string/tour_context_calling" />

    <TextView
        android:id="@+id/tourpagesubject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_below="@id/tourpagetitle"
        android:layout_centerHorizontal="true"
        style="@style/TextSmall"
        android:text="@string/tour_share_call_purpose" />

    <LinearLayout
        android:id="@+id/profile_image_frame"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/tourpageimage"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:scaleType="fitCenter"
            android:contentDescription="@string/tour_title"
            android:src="@mipmap/ic_launcher" />
    </LinearLayout>

    <TextView
        android:id="@+id/bottompadding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        style="@style/TextExtraSmall" />

    <TextView
        android:id="@+id/tourpagefooter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/bottompadding"
        style="@style/TextExtraSmall"
        android:text="@string/tour_auto_response" />
</RelativeLayout>