<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="178dp"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="?attr/colorPrimaryDark"
    android:padding="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/header_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:text="@string/welcome_page_title" />

        <TextView
            android:id="@+id/subject_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:layout_marginTop="6dp"
            android:textStyle="normal" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/header_image"
        android:background="@drawable/button_bg_round_lightgreen"
        android:contentDescription="@string/text_caller_img"
        android:src="@drawable/ic_person_white_24dp_web"
        android:scaleType="centerInside"
        android:layout_width="70dp"
        android:layout_height="70dp" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/profile_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/profile_img"
        android:background="@xml/button_transparent"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/header_image"
        android:src="@drawable/ic_edit_white_24dp" />
</RelativeLayout>